Set up an actual color scheme. Reworked layout for info pages. Set up a notification banner for COVID info.

--- a/ants.html
+++ b/ants.html
@@ -96,6 +96,12 @@
     </ol>
 
     <!-- Project One -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Carpenter Ants</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-7">
             <a href="#">
@@ -103,18 +109,41 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3 id="carpenter">Carpenter Ants</h3>
+            <h3>Pest Description</h3>
             <p>Native to the eastern seaboard, Carpenter ants make their homes inside the same wood that houses people like you and me.
             Carpenter Ants are drawn to wooden structures, as opposed to fallen trees, due to the insulation and heating.
             Once they are inside, they will create passages and chambers to live in, leading to significant structural damage.
             The leavings of Carpenter Ants can be distinguished from Termites because Carpenter Ants will leave large amounts of debris similar to sawdust.
             </p>
-            <h4>Treatment</h4>
-            <p>Our skilled team will diagnose the level of infestation at your home or business and choose the most efficient method of treatment
-            from our line of sprays.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Color: Black or reddish/yellowish</li>
+                    <li>Size: 1/4" to 1/2", oval in shape</li>
+                    <li>Unique: Large mandibles</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SIGNS OF AN INFESTATION</h3>
+                <ul>
+                    <li>Workers: Seen foraging for food.</li>
+                    <li>Swarmers: Winged ants that are usually spotted when a colony is large enough to create others.</li>
+                    <li>Debris: Dead ant parts mixed with rough wood shavings indicate a colony has been nesting and tunneling in the structure's wood.</li>
+                    <li>Sound: A faint rustling sound can be heard as ants move around in the wood of the home's structure.</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
     </div>
     <!-- /.row -->
@@ -122,6 +151,12 @@
     <hr>
 
     <!-- Project Two -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Acrobat Ants</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-7">
             <a href="#">
@@ -129,17 +164,38 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Sugar Ants</h3>
-            <p>Sugar Ants in the United States are the generic grouping of many different families of ant, all sharing a
-            preference for sweet and greasy food scraps. These ants find their indoors, through the smallest crack, tear, or gap, to
-            eat food and ruin your space.</p>
-            <h4>Treatment</h4>
-            <p>Our expertise in the field of extermination will ensure that steps will be taken to formally identify the
-            individual family of ant in question. We will use this information to find the correct treatment for the job based
-            on the unique species and severity of infestation.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+            <h3>Pest Description</h3>
+            <p>Acrobat Ants are among the most common ant species in Southern Maryland and get their name from their habit of
+            raising their abdomen above their head when disturbed. Despite typically living outdoors in dead or decaying wood, they often
+            invade homes through gaps in wiring and pipes, cracks in foundation, or even through entryways accessed through tree branches.
+            Once indoors, their colonies will nest in woodwork and insulation, pressing forward into pantries in search of food.</p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Color: Black or dark brown</li>
+                    <li>Size: 1/8" to 1/16", uneven in shape</li>
+                    <li>Unique: heart-shaped abdomen</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SIGNS OF AN INFESTATION</h3>
+                <ul>
+                    <li>Trails: Ants will form a line between their colony and discovered food sources.</li>
+                    <li>Debris: Deposits of foam insulation and dead ants can be found near their nests.</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
     </div>
     <!-- /.row -->
@@ -147,6 +203,12 @@
     <hr>
 
     <!-- Project Three -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Odorous House Ants</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-7">
             <a href="#">
@@ -154,15 +216,37 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Odorous House Ants</h3>
+            <h3>Pest Description</h3>
             <p>Smelling similar to rotten coconut, Odorous House Ants stink when stepped on and will assault your nose.
-            They are attracted to sweet foods and water and are found during the spring and fall.</p>
-            <h4>Treatment</h4>
-            <p>Our skilled professionals will use clues, such as leavings and sightings, to find the source of infestation
-            and the right method of treatment. If other methods fail, our dogs can be deployed to follow the smell to the source.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+            They are attracted to sweet foods and water and are found during the spring and fall. They are attracted to sweet foods
+            and will invade homes for them, contaminating all surfaces in their path.</p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Color: Black or dark brown</li>
+                    <li>Size: 1/8" to 3/16", uneven in shape</li>
+                    <li>Unique: The smell of rotten coconut is emitted when they are crushed.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SIGNS OF AN INFESTATION</h3>
+                <ul>
+                    <li>Workers: Seen foraging for food.</li>
+                    <li>Swarmers: Winged ants that are usually spotted when a colony is large enough to create others.</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
     </div>
     <!-- /.row -->
@@ -170,23 +254,51 @@
     <hr>
 
     <!-- Project Four -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Argentine Ants</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
-
         <div class="col-md-7">
             <a href="#">
                 <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Argentine Ants</h3>
-            <p>Preferring sweet foods, Argentine Ants will eat almost anything and can create colonies covering an entire backyard.
-            If left unchecked, they can contaminate food and food surfaces with their bodily waste.</p>
-            <h4>Treatment</h4>
-            <p>Our team will identify locate and search the colony for any and all openings before using the appropriate method for treatment.
-            The method of treatment varies based on the severity of infestation and size of the colony.</p>
-            <a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+            <h3 class="my-3">Pest Description</h3>
+            <p>Native to Argentina abnd other South American countries, Argentine ants are an invasive species that has built a reputation for displacing native ants. They are attracted to moist
+                areas, such as mulch, piles of trash, and home foundations, and will take shelter through the cracks in homes during the cool Fall weather.
+                Their nests can grow to be much larger than that of the native ants they drive away, while also killing other insects that are important to local ecosystems.
+                Preferring sweet foods, Argentine Ants will eat almost anything and can create colonies covering an entire backyard. If left unchecked, they can contaminate
+                food and food surfaces with their bodily waste as they feed by moving food from mouth to mouth.</p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Color: Light to dark brown</li>
+                    <li>Size: 1/6" to 1/4", oval in shape</li>
+                    <li>Unique: Antennae have 12 segments</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SIGNS OF AN INFESTATION</h3>
+                <ul>
+                    <li>Trails: Trails up buildings, trees, and into homes are the most visible sign.</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
     </div>
     <!-- /.row -->
