--- a/bed-bugs.html
+++ b/bed-bugs.html
@@ -99,7 +99,7 @@
             <img class="img-fluid" src="http://placehold.it/750x500" alt="">
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 bg-second">
             <h3 class="my-3">Pest Description</h3>
             <p>Bed bugs are parasitic insects that feed upon the blood of their hosts.
                 Preferring the confined habitats inside beds and other furniture, remain mostly unseen during the day
