--- a/roaches.html
+++ b/roaches.html
@@ -93,10 +93,9 @@
     </ol>
 
     <!-- Roaches -->
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1 class="thick">American Cockroaches</h1>
-            <p class="text-white m-0"></p>
         </div>
     </div>
     <!-- Portfolio Item Row -->
@@ -126,7 +125,7 @@
         </div>
     </div>
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>German Cockroaches</h1>
             <p class="text-white m-0"></p>
@@ -162,7 +161,7 @@
     </div>
     <!-- /.row -->
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Oriental Cockroaches</h1>
             <p class="text-white m-0"></p>
@@ -196,7 +195,7 @@
     </div>
     <!-- /.row -->
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Brown-banded Cockroaches</h1>
             <p class="text-white m-0"></p>
