--- a/rodents.html
+++ b/rodents.html
@@ -93,7 +93,7 @@
     </ol>
 
     <!-- Rodents -->
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1 class="thick">House Mice</h1>
             <p class="text-white m-0"></p>
@@ -128,7 +128,7 @@
         </div>
     </div>
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Deer Mice</h1>
             <p class="text-white m-0"></p>
@@ -163,7 +163,7 @@
     </div>
     <!-- /.row -->
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Norway Rats</h1>
             <p class="text-white m-0"></p>
@@ -198,7 +198,7 @@
     </div>
     <!-- /.row -->
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Roof Rats</h1>
             <p class="text-white m-0"></p>
