--- a/spiders.html
+++ b/spiders.html
@@ -93,7 +93,7 @@
     </ol>
 
     <!-- Rodents -->
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1 class="thick">Black Widow Spider</h1>
             <p class="text-white m-0"></p>
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Brown Recluse Spider</h1>
             <p class="text-white m-0"></p>
@@ -195,7 +195,7 @@
     </div>
     <!-- /.row -->
 
-    <div class="card text-white bg-primary my-5 py-4 text-center">
+    <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>Wolf Spider</h1>
             <p class="text-white m-0"></p>
