--- a/termite-control.html
+++ b/termite-control.html
@@ -82,7 +82,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Termite Control
-        <small>Service</small>
+        <small>Services</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -100,9 +100,9 @@
         </div>
 
         <div class="col-md-4">
-            <h3 class="my-3">Treatment Description</h3>
-            <p>Termite infestations are difficult to detect and even harder to treat. Let our trained professionals deal with them for you!</p>
-            <h3 class="my-3">The steps:</h3>
+            <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">HOW TERMITE CONTROL WORKS</h3>
+            <p>Homeowners lose an average of $3,000 to termite damage...</p>
+            <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">THE STEPS:</h3>
             <!--ul>
                 <li>Detect-
                     Inspection
@@ -112,18 +112,21 @@
                 <li>Perform</li>
                 <li>Observe</li>
             </ul-->
-            <button class="btn btn-primary" onclick="myFunction(1)">Detect</button>
-            <button class="btn btn-primary" onclick="myFunction(2)">Perform</button>
-            <button class="btn btn-primary" onclick="myFunction(3)">Observe</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(1)">DETECT</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(2)">PERFORM</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(3)">OBSERVE</button>
 
             <div id="div1" name="info" style="display:none">
                 <h5>Inspection</h5>
-                A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture, your foundation for wood debris,
-                and other risk areas that may attract an infestation. Orkin utilizes state-of-the-art equipment such as IR thermometers, moisture meters, and termite
-                detection systems to help him scientifically assess your home. When we are done, you will receive our recommendation, complete with customized digital diagrams
-                and an Orkin Inspection Report outlining problems we identified, as well as recommended plan to protect your home from termites.
+                A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture,
+                your foundation for wood debris, and other risk areas that may attract an infestation. Calvert Exterminators utilizes
+                tried-and-true detection methods along with a keen eye for even the most minute details in order to fully assess the level of infestation and damage.
+                Upon completing the initial sweep, we will recommend a service method along with a personalized price tag, just for you.
             </div>
             <div id="div2" name="info" style="display:none">
+                If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
+
+
                 If Orkin finds a termite infestation or the potential for one, he will discuss the best solution for your situation.
                 <h5>Termidor® Liquid Treatment</h5>
 
@@ -135,9 +138,9 @@
                 Sentricon® targets at-risk locations around your home such as, old tree stumps, moist soil, irrigation sprinkler heads, roof downspouts and other moist areas.
             </div>
             <div id="div3" name="info" style="display:none">
-                <h5>Inspection</h5>
-                After your treatment, your Orkin Specialist will implement a Continuous Termite Protection Plan to monitor and help protect your home for any future signs of termite activity.
-                Your plan will also include a Re-treatment Program. That way, in the unlikely event that termites invade your home following our visit, Orkin will also return to battle the problem at no additional charge.
+                After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
+                Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
+
             </div>
 
             <script>
@@ -163,32 +166,92 @@
     </div>
     <!-- /.row -->
 
-    <!-- Related Projects Row -->
-    <h3 class="my-4">Related Projects</h3>
-
     <div class="row">
+        <div class="col">
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">HOW MONTHLY PEST CONTROL WORKS:</h3>
+            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">FIRST VISIT</h4>
+            <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
+            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">REGULAR VISITS</h4>
+            <p> Pests are always active, so you need protection to stay ahead of them.
+
+                Our custom treatments adapt with the season to address seasonal pest activity in your area, giving you protection all year long.
+
+                We'll come back to re-treat outside your home every season for a total of four treatments, including the initial service.
+
+                And if pests come back, so will we - at no cost to you. It is all a part of our 100% Satisfaction Guarantee.</p>
+        </div>
+    </div>
+
+    <!-- Related Projects Row -->
+    <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">COVERAGE INCLUDES:</h3>
+
+    <div class="row" style="background-color: dodgerblue; border-radius: 25px;">
 
         <div class="col-md-3 col-sm-6 mb-4">
-            <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <a href="ants.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Ants</p>
             </a>
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
-            <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <a href="roaches.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Cockroaches</p>
             </a>
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
-            <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <a href="rodents.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Rats and Mice</p>
             </a>
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
-            <a href="#">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <a href="spiders.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Spiders</p>
+            </a>
+        </div>
+
+    </div>
+    <!-- /.row -->
+    <div class="row" style="background-color: dodgerblue; border-radius: 25px;">
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="mosquitoes.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Mosquitoes</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="flies.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Flies</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="bed-bugs.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Bed Bugs</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="hornets.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Hornets</p>
             </a>
         </div>
 
