--- a/contact.html
+++ b/contact.html
@@ -127,9 +127,9 @@
 
     <!-- Contact Form -->
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <div class="row">
+    <div class="row bg-main">
       <div class="col-lg-8 mb-4">
-        <h3 style="font-family: Arial Black; color:dodgerblue">Arrange a Service</h3>
+        <h3 style="font-family: Arial Black; color:#15B2D1">Arrange a Service</h3>
         <p66>Just follow the forms and we'll get back to you with a time available within one business day!</p66>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="row">
