--- a/pest-control.html
+++ b/pest-control.html
@@ -82,7 +82,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Pest Control
-        <small>Service</small>
+        <small>Services</small>
     </h1>
 
     <ol class="breadcrumb">
