--- a/trapping.html
+++ b/trapping.html
@@ -1,10 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Animal Control</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet">
+
 </head>
+
 <body>
 
+<!-- Navigation -->
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item active dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Portfolio
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+                        <a class="dropdown-item active" href="portfolio-item.html">Single Portfolio Item</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Blog
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                        <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
+                        <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
+                        <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Other Pages
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                        <a class="dropdown-item" href="full-width.html">Full Width Page</a>
+                        <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
+                        <a class="dropdown-item" href="faq.html">FAQ</a>
+                        <a class="dropdown-item" href="404.html">404</a>
+                        <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Heading/Breadcrumbs -->
+    <h1 class="mt-4 mb-3">Anmimal Control
+        <small>Services</small>
+    </h1>
+
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="index.html">Services</a>
+        </li>
+        <li class="breadcrumb-item active">Animal Control</li>
+    </ol>
+
+    <!-- Portfolio Item Row -->
+    <div class="row">
+
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">HOW ANIMAL CONTROL SERVICES WORK</h3>
+            <p>From bats to copperheads, we'll trap and remove them.</p>
+            <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">THE STEPS:</h3>
+            <!--ul>
+                <li>Detect-
+                    Inspection
+
+                    An Orkin Specialist will perform a thorough examination of you home by checking your basement or crawlspace for moisture, your foundation for wood debris, and other risk areas that may attract an infestation. Orkin utilizes state-of-the-art equipment such as IR thermometers, moisture meters, and termite detection systems to help him scientifically assess your home. When we are done, you will receive our recommendation, complete with customized digital diagrams and an Orkin Inspection Report outlining problems we identified, as well as recommended plan to protect your home from termites.
+                </li>
+                <li>Perform</li>
+                <li>Observe</li>
+            </ul-->
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(1)">DETECT</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(2)">PERFORM</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(3)">OBSERVE</button>
+
+            <div id="div1" name="info" style="display:none">
+                <h5>Inspection</h5>
+                A Calvert specialist will perform a thorough examination of your property by examining typical nesting locations and other risk areas that may attract an animal problem.
+                Calvert Exterminators utilizes tried-and-true detection methods along with a keen eye for even the most minute details in order to locate the animal, or animals, in question
+                before trapping and removing them. Upon completing the initial sweep, we will recommend an ongoing service method along with a personalized price tag, just for you.
+            </div>
+            <div id="div2" name="info" style="display:none">
+                Our specialists will utilize the information given about the animal along, with typical behavior patterns and infestation signs, to locate it wherever it may lie.
+
+
+                If Orkin finds a termite infestation or the potential for one, he will discuss the best solution for your situation.
+                <h5>Termidor® Liquid Treatment</h5>
+
+                The treatment offers immediate protection as well as protection from future infestations throughout the duration of the protection plan.
+                <h5>Dry Foam And OrkinFoam</h5>
+
+                OrkinFoam treatments expand to reach critical areas, providing extra coverage and protection against termites.
+                <h5>Sentricon® Bait and Monitoring</h5>
+                Sentricon® targets at-risk locations around your home such as, old tree stumps, moist soil, irrigation sprinkler heads, roof downspouts and other moist areas.
+            </div>
+            <div id="div3" name="info" style="display:none">
+                After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future problems.
+                Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new critters have invaded your home.
+            </div>
+
+            <script>
+                function myFunction(div) {
+                    var x = document.getElementById("div"+div);
+                    if (x.style.display === "none") {
+                        x.style.display = "block";
+                        var elems = document.getElementsByName("info");
+                        for(var i=0; i<elems.length;i++)
+                        {
+                            if(elems[i]!=x)
+                            {
+                                elems[i].style.display = "none";
+                            }
+                        }
+                    } else {
+                        x.style.display = "none";
+                    }
+                }
+            </script>
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+        <div class="col">
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">HOW MONTHLY ANIMAL CONTROL WORKS:</h3>
+            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">FIRST VISIT</h4>
+            <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
+            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">REGULAR VISITS</h4>
+            <p> Pests are always active, so you need protection to stay ahead of them.
+
+                Our custom treatments adapt with the season to address seasonal pest activity in your area, giving you protection all year long.
+
+                We'll come back to re-treat outside your home every season for a total of four treatments, including the initial service.
+
+                And if pests come back, so will we - at no cost to you. It is all a part of our 100% Satisfaction Guarantee.</p>
+        </div>
+    </div>
+
+    <!-- Related Projects Row -->
+    <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">COVERAGE INCLUDES:</h3>
+
+    <div class="row" style="background-color: dodgerblue; border-radius: 25px;">
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="ants.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Bats</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="roaches.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Beavers</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="rodents.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Coyotes</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="spiders.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Foxes</p>
+            </a>
+        </div>
+
+    </div>
+    <!-- /.row -->
+    <div class="row" style="background-color: dodgerblue; border-radius: 25px;">
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="mosquitoes.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Opossums</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="flies.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Raccoons</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="bed-bugs.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Skunks</p>
+            </a>
+        </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="hornets.html">
+                <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
+                <img src="dennis.jpg" class="rounded-circle-custom">
+                <p style="font-family: Arial Black; color:white">Squirrels</p>
+            </a>
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+</div>
+<!-- /.container -->
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
